EX-3849: fix DE alignment issue for adblocking

--- a/modules/control-center/sources/styles/styles.scss
+++ b/modules/control-center/sources/styles/styles.scss
@@ -969,6 +969,7 @@ html {
         .dropdown-btn {
             display: inline-block !important;
             padding: 1px 3px;
+            margin-right: 10px;
 
             .arr {
                 margin: 5px 0 1px 1px;
@@ -1006,6 +1007,7 @@ html {
         .dropdown-btn {
             display: inline-block !important;
             padding: 1px 3px;
+            margin-right: 12px;
 
             .arr {
                 margin: 5px 0 1px 1px;
